@@ -20,6 +20,7 @@ Verilator 5.023 devel
 **Minor:**
 
 * Fix invalid cast on string structure creation (#4921). [esynr3z]
+* Fix __Vlip undefined error in --freloop (#4824). [Justin Yao Du]
 
 
 Verilator 5.022 2024-02-24
